--- a/animal.css
+++ b/animal.css
@@ -1,9 +1,17 @@
 body{
 	background-color: #F4EEEE;
+	font-family: 'Anonymous Pro', monospace;
 }
 
 h1{
 	text-align: center;
 	background-color: #E2D9D9;
 	padding:20px;
+}
+
+img{
+	float: left;
+	width: 550px;
+	height:450px;
+	margin-right: 20px;
 }
